# mlops-zoomcamp

./: .env-template  .gitignore  pyproject.toml  run_mlflow.sh
archive/02-experiment-tracking/running-mlflow-examples/: scenario-1.ipynb
archive/04-deployment/batch/: score.py  score_backfill.py
archive/04-deployment/streaming/: lambda_function.py
archive/04-deployment/web-service-mlflow/: predict.py
archive/05-monitoring/: dummy_metrics_calculation.py
archive/06-best-practices/code/integraton-test/: test_kinesis.py
archive/cohorts/2022/02-experiment-tracking/homework/: hpo.py  preprocess_data.py  register_model.py  train.py
archive/cohorts/2022/03-orchestration/: homework.py  homework_solution.py
archive/cohorts/2022/03-orchestration/code/: model_training.py  orchestration.py  prefect_deploy.py  prefect_flow.py  work-queue.py
archive/cohorts/2022/04-deployment/homework/: batch.py
archive/cohorts/2022/05-monitoring/homework/: prepare.py  test.py
archive/cohorts/2022/06-best-practices/homework/: batch.py
archive/cohorts/2022/06-best-practices/homework_solution/: batch.py  integration_test.py
archive/cohorts/2023/02-experiment-tracking/homework/: hpo.py  register_model.py  train.py
archive/cohorts/2023/02-experiment-tracking/solution-mlflow/: hpo.py  register_model.py  train.py
archive/cohorts/2023/04-deployment/homework_solution/: batch.py
archive/cohorts/2023/06-best-practices/homework/: batch.py
src/: 02_exp_track_mlflow_local.py  prefect_cat_dog_facts.py  prefect_cat_facts.py
(+8 files in other folders)
